gitops/apps/istio-gateway-api/public-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: public
  annotations:
    cert-manager.io/cluster-issuer: acme-cloudflare
    external-dns.alpha.kubernetes.io/target: didactiklabs.io
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "*.didactiklabs.io"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.didactiklabs.io"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: didactiklabs-wildcard-tls
    - name: kube
      hostname: "*.didactiklabs.io"
      protocol: TLS
      port: 6443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
spec:
  parentRefs:
  - name: public
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
